Updated front page to use twitter/bootstrap

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -3,7 +3,8 @@ admin:
     label:
         users: Users
         profiles: Profiles
-        roles: Roles
+
+sonata.admin.label.acl_roles: Roles
 
 page:
     front:
