Major cleanup, start migrating to Bootstrap 3

--- a/app/Resources/translations/messages.sr_Cyrl.yml
+++ b/app/Resources/translations/messages.sr_Cyrl.yml
@@ -3,7 +3,7 @@ page:
         title: Куруми - Упознај нове људе
         motto: Региструј се, важи?
         log_in: Пријави се
-        meet_your_area: Упознај нове људе у близу тебе.
+        meet_your_area: Упознај нове људе близу тебе.
         meet_your_city: Упознај нове људе у граду %city%.
         first_time: Први пут на нашем сајту?
         join_now: Придружи нам се!
